--- a/PG/8_error_dithering/8_error_dithering/8_error_dithering.csproj
+++ b/PG/8_error_dithering/8_error_dithering/8_error_dithering.csproj
@@ -72,6 +72,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Matrix.cs" />
+    <Compile Include="Palette.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
